Add CV download link to nav
CV is PDF in Assets folder

--- a/docs/_includes/nav_footer_custom.html
+++ b/docs/_includes/nav_footer_custom.html
@@ -39,6 +39,21 @@
 		  </svg>
       Email me
     </a>
+	
+<a href="/assets/CV_Edward_Cork.pdf" target="_blank" style="
+        display: flex; 
+        align-items: center; 
+        text-decoration: none; 
+        color: #5c6975; 
+        font-size: 14px;
+        font-weight: 500;
+    ">
+      <svg style="width: 20px; height: 20px; margin-right: 12px; fill: #F40F02;" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zM6 20V4h7v5h5v11H6z"/>
+        <path d="M8 15v-4h2v1h-1v1h1v1h-1v1H8zm3 0v-4h1.5c.3 0 .5.2.5.5v1c0 .3-.2.5-.5.5H12v2h-1zm3-3h1v-1h-1v1zm-1 3v-4h1.5c.3 0 .5.2.5.5v3h-1v-1h-1v1.5h-1z"/> 
+      </svg>
+      Download CV 
+    </a>
 
   </div>
 </div>
