--- a/docs/_includes/nav_footer_custom.html
+++ b/docs/_includes/nav_footer_custom.html
@@ -4,9 +4,9 @@
     padding-top: 20px; 
     padding-bottom: 40px; 
     text-align: left;
-    margin-left: 20px; /* <--- This pulls the content left to match the menu */
+    margin-left: 0px; /* <--- This pulls the content left to match the menu */
     padding-left: 0;
-	margin-right: 150px;
+	padding-right: 110px;
 ">
   
   <div style="display: flex; flex-direction: column; gap: 12px;">
