Add repo link to footer

--- a/docs/_includes/footer_custom.html
+++ b/docs/_includes/footer_custom.html
@@ -1,1 +1,6 @@
-Distributed by an <a href="https://github.com/just-the-docs/just-the-docs/tree/main/LICENSE.txt">MIT license.</a> <a href="https://www.netlify.com/">This site is powered by Netlify.</a>
+This portfolio is built with Jekyll and hosted on GitHub. View the source code <a href="https://github.com/edcork/edcork.github.io">here</a>.
+<br><br>
+Distributed by an <a href="https://github.com/just-the-docs/just-the-docs/tree/main/LICENSE.txt">MIT license</a> and powered by <a href="https://www.netlify.com/">Netlify</a>.
+
+
+
