--- a/docs/_includes/nav_footer_custom.html
+++ b/docs/_includes/nav_footer_custom.html
@@ -4,50 +4,53 @@
     padding-top: 20px; 
     padding-bottom: 40px; 
     text-align: left;
-    margin-left: 0px; /* <--- This pulls the content left to match the menu */
+    margin-left: 0px;
     padding-left: 0;
-	padding-right: 110px;
+    /* Removed padding-right: 110px to prevent squeezing content */
 ">
   
   <div style="display: flex; flex-direction: column; gap: 12px;">
 
-	<a href="https://www.linkedin.com/in/edwardcork/" target="_blank" style="
-			display: flex; 
-			align-items: center; 
-			text-decoration: none; 
-			color: #5c6975; 
-			font-size: 14px;
-			font-weight: 500;
-		">
-		  <svg style="width: 20px; height: 20px; margin-right: 12px; fill: #0077b5;" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-			<path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
-		  </svg>
-		  LinkedIn
-		</a>
+    <a href="https://www.linkedin.com/in/edwardcork/" target="_blank" style="
+            display: flex; 
+            align-items: center; 
+            text-decoration: none; 
+            color: #5c6975; 
+            font-size: 14px;
+            font-weight: 500;
+            white-space: nowrap; /* Prevents text wrapping */
+        ">
+          <svg style="width: 20px; height: 20px; min-width: 20px; flex-shrink: 0; margin-right: 12px; fill: #0077b5;" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+          </svg>
+          LinkedIn
+    </a>
 
-	<a href="mailto:edcork@gmail.com" style="
-			display: flex; 
-			align-items: center; 
-			text-decoration: none; 
-			color: #5c6975; 
-			font-size: 14px;
-			font-weight: 500;
-		">
-		  <svg style="width: 20px; height: 20px; margin-right: 12px; fill: #EA4335;" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-			<path d="M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-2.023 2.309-3.178 3.927-1.964L5.455 4.64 12 9.548l6.545-4.91 1.528-1.145C21.69 2.28 24 3.434 24 5.457z"/>
-		  </svg>
+    <a href="mailto:edcork@gmail.com" style="
+            display: flex; 
+            align-items: center; 
+            text-decoration: none; 
+            color: #5c6975; 
+            font-size: 14px;
+            font-weight: 500;
+            white-space: nowrap;
+        ">
+          <svg style="width: 20px; height: 20px; min-width: 20px; flex-shrink: 0; margin-right: 12px; fill: #EA4335;" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path d="M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-2.023 2.309-3.178 3.927-1.964L5.455 4.64 12 9.548l6.545-4.91 1.528-1.145C21.69 2.28 24 3.434 24 5.457z"/>
+          </svg>
       Email me
     </a>
-	
-<a href="/assets/CV_Edward_Cork.pdf" target="_blank" style="
+    
+    <a href="/assets/CV_Edward_Cork.pdf" target="_blank" style="
         display: flex; 
         align-items: center; 
         text-decoration: none; 
         color: #5c6975; 
         font-size: 14px;
         font-weight: 500;
+        white-space: nowrap;
     ">
-      <svg style="width: 20px; height: 20px; margin-right: 12px; fill: #F40F02;" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <svg style="width: 20px; height: 20px; min-width: 20px; flex-shrink: 0; margin-right: 12px; fill: #F40F02;" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
         <path d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zM6 20V4h7v5h5v11H6z"/>
         <path d="M8 15v-4h2v1h-1v1h1v1h-1v1H8zm3 0v-4h1.5c.3 0 .5.2.5.5v1c0 .3-.2.5-.5.5H12v2h-1zm3-3h1v-1h-1v1zm-1 3v-4h1.5c.3 0 .5.2.5.5v3h-1v-1h-1v1.5h-1z"/> 
       </svg>
