--- a/docs/_includes/head_custom.html
+++ b/docs/_includes/head_custom.html
@@ -1,6 +1,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+<meta name="google-site-verification" content="3gFWB42sfflMQZD0FkgKSN7u4R0dZNpedfz4v6yMNzM" />
 
 <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
 
